--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "user-crud",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "build": "tsc",
+    "start:prod": "node ./dist/server.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "lint": "eslint src --ignore-path .eslintignore --ext .ts",
     "lint:fix": "npx eslint src --fix",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
@@ -25,6 +27,7 @@
     "eslint-config-prettier": "^9.1.0",
     "express": "^4.18.2",
     "mongoose": "^8.0.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   }
 }
