--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
@@ -31,6 +32,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "zod": "^3.22.4"
   }
 }
